# rendell-text

./: .gitignore  .gitmodules  CMakeLists.txt
include/: rendell_text.h
include/rendell_text/: Font.h  FontLoading.h  GlyphAtlasCache.h  GlyphBitmap.h  IFontRaster.h  TextLayout.h  TextRenderer.h  defines.h  initialization.h  rendell_text.h
include/rendell_text/private/: FontRasterizationResult.h  GlyphBuffer.h  IFontRaster.h  RasteredFontStorage.h  RasterizedGlyphRange.h  TextBatch.h  TextBuffer.h
internal/: logging.h
res/Shaders/: TextRenderer.fs  TextRenderer.vs
src/: Font.cpp  FontLoading.cpp  FontRaster.cpp  FontRaster.h  FontRasterizationResult.h  GlyphAtlasCache.cpp  GlyphBuffer.cpp  GlyphBuffer.h  IFontRaster.h  RasteredFontStorage.cpp  RasteredFontStorage.h  RasteredFontStorageManager.cpp  RasteredFontStorageManager.h  RasterizedGlyphRange.cpp  RenderingServer.cpp  RenderingServer.h  TextBatch.cpp  TextBatch.h  TextBuffer.cpp  TextBuffer.h  TextLayout.cpp  TextLayout.h  TextRenderer.cpp  TextRenderer.h  defines.h  freetype.h  initialization.cpp  logging.cpp  rendell_text.cpp  rendell_text.h
